--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "observer-monorepo",
   "private": true,
   "scripts": {
-    "dev": "pnpm --filter ./packages --parallel run dev"
+    "dev": "pnpm --filter ./packages --parallel run dev",
+    "test": "pnpm -r test"
   },
   "devDependencies": {
     "pnpm": "latest",
-    "eslint": "latest",
-    "@typescript-eslint/parser": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-plugin-prettier": "latest",
-    "prettier": "latest",
-    "typescript": "latest"
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.5",
+    "vitest": "^3.1.4",
+    "@vitest/coverage-v8": "^3.1.4"
   }
 } 
