Setup documentationwith VitePress

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,10 @@ public
 # VuePress build output
 .vuepress/dist
 
+# VitePress
+docs/.vitepress/dist
+docs/.vitepress/cache
+
 # Serverless Zips
 .serverless/
 
