Refactor package structure by renaming client, core, and server packages to use the @observer scope and remove obsolete files.

--- a/packages/@observer/server/tsconfig.json
+++ b/packages/@observer/server/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "outDir": "dist"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"],
