--- a/packages/@observer/client/tsconfig.json
+++ b/packages/@observer/client/tsconfig.json
@@ -1,7 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"],
