Update package.json files to remove outdated @types/node dependency, add uuid as a dependency in @observer/core, and update devDependencies for @types/node and @types/uuid.

--- a/packages/@observer/core/package.json
+++ b/packages/@observer/core/package.json
@@ -7,8 +7,13 @@
     "dev": "echo \"dev script for @observer/core\"",
     "test": "vitest run"
   },
-  "devDependencies": {
-    "typescript": "latest",
+  "dependencies": {
+    "uuid": "latest",
     "zod": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.20",
+    "@types/uuid": "latest",
+    "typescript": "latest"
   }
-} 
+}
